--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    padding: 0;
+}
+
+p,
+.text {
+    font-size: 20px;
+}
+
+@media only screen and (max-width: 425px) {
+    p,
+    .text {
+        font-size: 16px;
+    }
+}
